--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^3.4.16",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-safe-area-context": "^4.3.4",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
