--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-safe-area-context": "^4.3.4",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
