--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-safe-area-context": "^4.3.4",
+    "react-native-svg": "^13.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "styled-components": "^5.3.5",
     "uuid": "^9.0.0"
   },
