--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
     "native-base": "^3.4.16",
     "react": "18.1.0",
     "react-native": "0.70.1",
-    "react-native-safe-area-context": "^4.3.4",
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0",
     "react-native-svg": "^13.2.0",
     "react-native-swipe-list-view": "^3.2.9",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.5",
     "uuid": "^9.0.0"
   },
